More bugfixes