@@ -17,10 +17,17 @@ version '1.0-SNAPSHOT'
 sourceCompatibility = 1.9
 archivesBaseName = 'bluestone'
 mainClassName = 'com.khronodragon.bluestone.Start'
-/*applicationDefaultJvmArgs = [
+applicationDefaultJvmArgs = [
         '-Xms1000M',
-        '-Xmx2057431K -XX:MaxDirectMemorySize=10M -XX:MaxMetaspaceSize=92968K -XX:ReservedCodeCacheSize=240M -Xss1M -XX:+UseG1GC -server -XX:+CMSClassUnloadingEnabled -XX:+AggressiveOpts -XX:MaxInlineSize=64 -Djava.lang.invoke.stringConcat=MH_INLINE_SIZED_EXACT -XX:MaxGCPauseMillis=2500 -Xverify:none -cp build/classes/java/main:build/libs/bluestone-1.0-SNAPSHOT.jar:build/libs/bluestone-1.0-SNAPSHOT-all.jar -Dcom.sun.management.jmxremote  -Dcom.sun.management.jmxremote.authenticate=true -Dcom.sun.management.jmxremote.ssl=true  -Dcom.sun.management.jmxremote.ssl.need.client.auth=true -Dcom.sun.management.jmxremote.port=49981 -Dcom.sun.management.jmxremote.rmi.port=49982 -Djava.rmi.server.hostname=162.248.90.184 -Djavax.net.ssl.keyStore=/home/botuser/.keystore -Djavax.net.ssl.keyStoreType=JKS -Djavax.net.ssl.keyStorePassword=WApoticHair4 -Djavax.net.ssl.trustStore=/home/botuser/truststore.dat -Djavax.net.ssl.trustStoreType=JKS -Djavax.net.ssl.trustStorePassword=changeit -Dcom.sun.management.jmxremote.password.file=/home/botuser/jmx-auth.password com.khronodragon.bluestone.Start'
-]*/
+        '-XX:MaxDirectMemorySize=10M',
+        '-XX:MaxMetaspaceSize=95800K',
+        '-XX:ReservedCodeCacheSize=240M',
+        '-Xss1M',
+        '-Xmx3641799K',
+        '-XX:MaxInlineSize=64',
+        '-Xverify:none',
+        '-Djava.lang.invoke.stringConcat=MH_INLINE_SIZED_EXACT'
+]
 
 apply plugin: 'com.github.johnrengelman.shadow' // work around bug
 import de.sebastianboegl.gradle.plugins.shadow.transformers.Log4j2PluginsFileTransformer
@@ -41,7 +48,7 @@ shadowJar {
 }
 
 dependencies {
-    compile 'net.dv8tion:JDA:3.5.1_342'
+    compile 'net.dv8tion:JDA:3.5.1_344'
     compile 'com.sedmelluq:lavaplayer:1.2.56'
     compile 'com.squareup.okhttp3:okhttp:3.10.0'
     compile 'com.google.guava:guava:24.0-jre'
